; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_videoport.c_CommandChange.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_videoport.c_CommandChange.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.PicoVideo }
%struct.PicoVideo = type { i32, i8, i16 }

@Pico = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @CommandChange to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CommandChange() #0 {
  %1 = alloca %struct.PicoVideo*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store %struct.PicoVideo* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Pico, i32 0, i32 0), %struct.PicoVideo** %1, align 8
  store i32 0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %4 = load %struct.PicoVideo*, %struct.PicoVideo** %1, align 8
  %5 = getelementptr inbounds %struct.PicoVideo, %struct.PicoVideo* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  store i32 %6, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = lshr i32 %7, 2
  %9 = and i32 %8, 12
  %10 = load i32, i32* %2, align 4
  %11 = lshr i32 %10, 30
  %12 = or i32 %9, %11
  %13 = trunc i32 %12 to i8
  %14 = load %struct.PicoVideo*, %struct.PicoVideo** %1, align 8
  %15 = getelementptr inbounds %struct.PicoVideo, %struct.PicoVideo* %14, i32 0, i32 1
  store i8 %13, i8* %15, align 4
  %16 = load i32, i32* %2, align 4
  %17 = lshr i32 %16, 16
  %18 = and i32 %17, 16383
  store i32 %18, i32* %3, align 4
  %19 = load i32, i32* %2, align 4
  %20 = shl i32 %19, 14
  %21 = and i32 %20, 49152
  %22 = load i32, i32* %3, align 4
  %23 = or i32 %22, %21
  store i32 %23, i32* %3, align 4
  %24 = load i32, i32* %3, align 4
  %25 = trunc i32 %24 to i16
  %26 = load %struct.PicoVideo*, %struct.PicoVideo** %1, align 8
  %27 = getelementptr inbounds %struct.PicoVideo, %struct.PicoVideo* %26, i32 0, i32 2
  store i16 %25, i16* %27, align 2
  %28 = load i32, i32* %2, align 4
  %29 = and i32 %28, 128
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %0
  %32 = call i32 (...) @CommandDma()
  br label %33

33:                                               ; preds = %31, %0
  ret void
}

declare dso_local i32 @CommandDma(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
